--- a/svn/weixin/css/layout.css
+++ b/svn/weixin/css/layout.css
@@ -275,10 +275,12 @@ section a{
    }
     /*云中心*/
      .deviceNav{
-     	padding-top: 1rem;
-     	height: 40%;
+     	padding-top: 0.426rem;
+     	/*height: 40%;*/
+     	height: 2.9535rem;
      	
      }
+     
    .deviceTitle{
    	flex: 2;
    	
@@ -299,38 +301,139 @@ section a{
      .data_content{
   	position: absolute;
   	width: 93%;
-  	top: 20rem;
-  	font-size: 1.5rem;font-weight: 500;
+  	top: 8.52rem;
+  	font-size: 0.639rem;font-weight: 500;
   }
   .setting_box{
   	background-color: white;
   	padding: 1rem;
   	/*border: 1px solid deepskyblue;*/
     box-shadow: 1px 1px 10px  dodgerblue;
-    margin: 1rem;
+    margin: 0.426rem;
     width: 100%;
     display: flex;
     
   }
- 
-  .data_title{
-  	color: gray;
-  	display: inline-block;
-  
+  .devTop{
+  	 background-color: #26A6FF;
+  	 	padding-top: 0.746666rem;
+  	padding-left: 0.266666rem;
+  	padding-right: 0.26666rem;
+  	height: 8.066666rem;
+  }
+  .devHeader{
+  	display: flex;
+  	/*border: 1px solid red;*/
+  	color: white;
+  	padding: 0;
   
   }
-  .data_right{
-  	display: inline-block;
-  	/*float: right;*/
-  	position: relative;
+  
+   .box1{
+   	flex:1.5;
+   	font-size: 0.8rem;
+   	text-align: left;
+   	
+   }
+   .box2{
+   	align-self: flex-end;
+   }
+   .box2, .box3, .box4{
+   	   flex: 1;
+   	   text-align: center;
+   	   height: 100%;
+   	   font-size:0.35rem;
+   	    
+   }
+     .icon-dianchi:before ,.icon-mobile:before ,.icon-singal:before{
+     	color: white;
+     	
+     }
+     .icon-mobile:before{
+     	font-size: 0.8rem;
+     }
+     .icon-singal:before{
+     	font-size: 0.8rem;
+     }
+    .infoImg{
+    	width: 4.08rem;
+    	height: 4.08rem;
+    	border-radius: 100%;
+    	background-color: green;
+    	overflow: hidden;
+    	margin: 0 auto;
+    	margin-top: 0.8rem;
+    	
+    }
+     .infoImg img{
+     	width: 100%;
+     	height: 100%;
+     }
+     
+    .devBottom{
+    	position: relative;
+    	top: -1.466666rem;
+    }
+    .devBottom .box-bottom{
+    	border-radius: 15px;
+    }
+    
+  .hotport_box{
+  	display: flex;
+  	justify-content: space-between;
+  	align-items: center;
+  	
   	
   }
+  .hotport_box_left{
+  	flex: 3;
+  }
+  .hotport_box_left p .text_l{
+  	color: gray;
+  	font-size: 0.45rem;
+  	margin-right: 0.2rem;
+  }
+  .hotport_box_left p .text_right{
+  	margin-right: 0.66667rem;
+  	font-size: 0.45rem;
+  }
+  .hotport_btn{
+  	flex: 1;
+  	border: 1px solid red;
+  	padding-left: 0.2rem;
+  	padding-right: 0.2rem;
+  }
+  
+  .hort_box_btn button{
+   border: 0;
+   background-color: #26A6FF;
+   color: white;
+   padding: 0.1866666rem 0.4rem;
+   border-radius: 6px;
+   font-size: 0.4rem;1
+  }
+  .devBottom .box_common  span{
+  	font-size: 0.4rem;
+  }
+  .deviceInfo p{
+  	line-height: 0.76rem;
+  }
+  .devText{
+  	font-size: 0.45rem;
+  	font-weight: 600;
+  	color: gray;
+  }
+  
   .setting_box dd .data_title{
   	margin-right: 4rem;
   }
   .hotspot {
   	/*margin-right: 7rem;*/
   	flex: 3;
+  }
+  .deviceInfo p .icon-mobile:before{
+  	color: #26A6FF;
+  	font-size: 0.5rem;
   }
  .setting_box button{
  	background-color:dodgerblue;
@@ -355,7 +458,7 @@ section a{
 /*流量使用明细*/
 .nav_header{
 	display: flex;
-	height: 4.6666666rem;
+	height:51.72413793103448%;
 	
 }
 .nav_content{
@@ -374,6 +477,8 @@ section a{
 .head_right{
 	flex: 3;
 	font-size: 0.4rem;
+	margin-left: 0.5rem;
+	
 }
 .head_right ul li {
 	line-height: 0.7rem;
@@ -382,15 +487,24 @@ section a{
 	margin-right: 0.5rem;
 }
 
-[data-dpr="2"] .headimage{
-	height: 1rem;
-	width: 1rem;
+
+ .headimage{
+	/*height: 11.99400299850075%;*/
+	 height: 2.3rem;;
+	
+	width: 2.133333333333333rem;
 	background-color: white;
-	border-radius: 100px;
+	border-radius: 100%;
+	/*position: absolute;*/
+	margin-left: 0.36rem;
 }
+  .headimage img{
+  	width: 100%;
+  	height: 100%;
+  }
 .selecte_date{
 	margin: 0.3rem;
-	font-size: 0.8rem;
+	font-size: 0.5rem;
 	padding: 0.5rem;
 	
 	
@@ -409,7 +523,7 @@ section a{
 .footer_fixed{
 	display: flex;
 	height: 2rem;
-	background-color: deepskyblue;
+	background-color: #26A6FF;
 	vertical-align: bottom;
 	/*position: absolute;*/
 	 position: fixed;
@@ -420,6 +534,8 @@ section a{
 	flex: 1;
 	color: white;
 	text-align: center;
+	margin-top: 0.5rem;
+	
 }
 .dataImage1{
 	background-image:url(../images/personalCenter/Recharge@2x.png)
@@ -467,16 +583,30 @@ section a{
 .chargeBox{
 	 display: flex;
         flex-direction: column;
-        height: 300px;
-        width: 300px;
+        padding-top: 0; 
+     padding-bottom: 0; 
+     padding-left: 0; 
+     padding-right: 0;
+     padding: 0.1rem;
+        
 }
 .chargeRow{
-	  height: 100px;
+	  /*height: 100px;*/
             display: flex;
 }
 .chargeLeft,.chargeCenter,.chargeRight{
 	 flex: 1;
             height: 100px;
+            width: 0.6933333333333333rem;
+            border: 5px dashed gray;
+            height: 1.64rem;
+            margin: 0.2533333333333333rem;
+            text-align: center;
+            line-height: 2;
+            border-radius: 5px;
+            font-size: 0.4rem;
+            color: gray;
+            font-family: "微软雅黑";
 }
 /*充值缴费*/
 /*选项卡头部:*/
@@ -492,7 +622,9 @@ section a{
 }
 .ui-tab-nav li.current{
 	color: white;
-	border-bottom: 2px solid white;
+	border-bottom: 6px solid white;
+	
+	padding-bottom: 0.5rem;
 }
 
 .current p span{
@@ -812,6 +944,10 @@ display: inline-block;
 	font-size: 0.4rem;
 	
 	
+}
+.settingBtn .icon-jiantoudown:before{
+	position: relative;
+	top: 0.1rem;
 }
 .imageParent{
 	
@@ -1638,3 +1774,73 @@ display: inline-block;
 	border-bottom: 4px solid white!important;
 }
 
+.footer_fixed div a {
+	color: white;
+	font-size: 0.4rem;
+	text-decoration: none;
+}
+.footer_fixed div a:active{
+	text-decoration: none;
+}
+
+.footer_fixed div a h2 .icon:before{
+	color: white;
+}
+ .zhedie{
+ 	 /*display: flex;*/
+	height: 2rem;
+	/*background-color: deepskyblue;*/
+	vertical-align: bottom;
+	/*position: absolute;*/
+	 position: fixed;
+	bottom: 5.05rem;
+	width:100%;
+	display: none;
+	
+ }
+.bottom_menu{
+	float: right;
+	
+}
+.bottom_menu li{
+	border: 1px solid white;
+    background-color: #26A6FF;
+    height: 1rem;
+    font-size: 0.45rem;
+    text-align: center;
+    line-height: 1rem;
+    color: white;
+    padding: 0.1rem 0.2rem;
+}
+/*充值缴费*/
+   .chargeColor{
+     border: 4px solid #26A6FF;
+     color: #26A6FF;	
+   }
+.triangle-topleft {
+    width: 0;
+    height: 0;
+    border-top: 0.6666667rem solid #26A6FF;
+    border-right: 0.6666667rem solid transparent;
+    color: white;
+ 
+   display: inline-block;
+   position: relative;
+   right: 0.9rem;
+   top: -0.03rem;
+   visibility: hidden;
+    
+}
+.triangle-topleft p{
+	position: relative;
+    top: -0.8rem;
+    left: 0.1rem;
+    font-size: 0.3rem;
+    position: absolute;
+   
+}
+ .text_move{
+ 	position: relative;
+ 	bottom: 1rem;
+ }
+ 
